--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   min-height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url(images/banner.png);
+    url(images/iubat.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -19,7 +19,7 @@ nav {
   align-items: center;
 }
 nav img {
-  width: 150px;
+  width: 100px;
 }
 .nav-links {
   flex: 1;
